--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@mantine/hooks": "7.10.0",
     "@next/bundle-analyzer": "^14.1.3",
     "@tabler/icons-react": "^3.0.0",
+    "@tanstack/react-query": "^5.40.1",
+    "axios": "^1.7.2",
     "next": "14.1.3",
+    "no-try": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -35,6 +38,7 @@
     "@storybook/blocks": "^8.1.3",
     "@storybook/nextjs": "^8.1.3",
     "@storybook/react": "^8.1.3",
+    "@tanstack/react-query-devtools": "^5.40.1",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
