--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@mantine/core": "7.10.0",
     "@mantine/hooks": "7.10.0",
     "@next/bundle-analyzer": "^14.1.3",
+    "@serwist/next": "^9.0.2",
+    "@serwist/precaching": "^9.0.2",
+    "@serwist/sw": "^9.0.2",
     "@tabler/icons-react": "^3.0.0",
     "@tanstack/react-query": "^5.40.1",
     "axios": "^1.7.2",
