--- a/.gitignore
+++ b/.gitignore
@@ -132,4 +132,18 @@ dist
 .DS_Store
 
 bun.lockb
+
+public/precache.*.*.js
 public/sw.js
+public/workbox-*.js
+public/worker-*.js
+public/precache.*.*.js.map
+public/sw.js.map
+public/workbox-*.js.map
+public/worker-*.js.map
+
+**/public/serwist**
+**/public/sw**
+**/public/worker**
+**/public/fallback**
+**/public/precache**
