--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
     "@mantine/hooks": "7.10.0",
     "@next/bundle-analyzer": "^14.1.3",
     "@serwist/next": "^9.0.2",
-    "@serwist/precaching": "^9.0.2",
-    "@serwist/sw": "^9.0.2",
     "@tabler/icons-react": "^3.0.0",
     "@tanstack/react-query": "^5.40.1",
     "axios": "^1.7.2",
@@ -68,6 +66,7 @@
     "postcss-preset-mantine": "1.15.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.2.5",
+    "serwist": "^9.0.2",
     "storybook": "^8.1.3",
     "storybook-dark-mode": "^4.0.1",
     "stylelint": "^16.2.1",
