--- a/package.json
+++ b/package.json
@@ -21,19 +21,19 @@
   "dependencies": {
     "@mantine/core": "7.10.0",
     "@mantine/hooks": "7.10.0",
-    "@next/bundle-analyzer": "^14.1.3",
+    "@next/bundle-analyzer": "^14.2.3",
     "@serwist/next": "^9.0.2",
     "@tabler/icons-react": "^3.0.0",
     "@tanstack/react-query": "^5.40.1",
     "axios": "^1.7.2",
-    "next": "14.1.3",
+    "next": "^14.2.3",
     "no-try": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
-    "@next/eslint-plugin-next": "^14.1.3",
+    "@next/eslint-plugin-next": "^14.2.3",
     "@storybook/addon-essentials": "^8.1.3",
     "@storybook/addon-styling-webpack": "^1.0.0",
     "@storybook/blocks": "^8.1.3",
